# claude-marketplace

./: README.md
.claude-plugin/: marketplace.json
.claude/rules/: marketplace-sync.md
plugins/base/: README.md
plugins/base/.claude-plugin/: plugin.json
plugins/base/agents/: architect.md  build-error-resolver.md  code-reviewer.md  doc-updater.md  e2e-runner.md  planner.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
plugins/base/commands/: e2e.md  plan.md  skill-create.md  tdd.md
plugins/base/hooks/: hooks.json
plugins/base/rules/: testing.md
plugins/base/scripts/: sync-check.sh
plugins/base/scripts/lib/: utils.js
plugins/base/skills/backend-patterns/: SKILL.md
plugins/base/skills/build-fix/: SKILL.md
plugins/base/skills/checkpoint/: SKILL.md
plugins/base/skills/clickhouse-io/: SKILL.md
plugins/base/skills/code-review/: SKILL.md
plugins/base/skills/coding-standards/: SKILL.md
plugins/base/skills/continuous-learning/: SKILL.md
plugins/base/skills/e2e/: SKILL.md
plugins/base/skills/eval/: SKILL.md
plugins/base/skills/eval-harness/: SKILL.md
plugins/base/skills/frontend-patterns/: SKILL.md
plugins/base/skills/learn/: SKILL.md
plugins/base/skills/python-devenv-setup/examples/: devenv.nix  gitignore  pyproject.toml
plugins/codex-toolkit/: README.md
plugins/codex-toolkit/.claude-plugin/: plugin.json
plugins/codex-toolkit/commands/: codex-review.md  codex-start.md
plugins/codex-toolkit/hooks/: hooks.json
plugins/codex-toolkit/scripts/: review.sh
plugins/nix-skills/: plugin.json
scripts/: scaffold-plugin.sh
(+25 files in other folders)
